admin user can add trainers, normal user can book appointment with the trainer

--- a/QlikGym/src/main/resources/templates/signup.html
+++ b/QlikGym/src/main/resources/templates/signup.html
@@ -112,7 +112,7 @@
                         <!-- terms and condition agreement  -->
 
 
-                        <div class="form-group form-check text-center">
+                        <div class="form-group form-check">
 
                             <input type="checkbox"
                                    name="agreement"
@@ -126,6 +126,12 @@
 
 
                         </div>
+                        <!-- Add a checkbox for admin registration -->
+                        <div class="form-group form-check">
+                            <input type="checkbox" name="adminRegistration" class="form-check-input" id="adminRegistration">
+                            <label class="form-check-label" for="adminRegistration">Register as Admin</label>
+                        </div>
+
 
                         <div class="container text-center">
 
