trainer can upload its picture, update its profile

--- a/QlikGym/src/main/resources/templates/admin/add_trainer_form.html
+++ b/QlikGym/src/main/resources/templates/admin/add_trainer_form.html
@@ -111,6 +111,10 @@
                                 <label for="available">Available:</label>
                                 <input type="checkbox" id="available" name="available" class="form-check-input" />
                             </div>
+                            <!-- contact image, a bit different from the others -->
+                            <div class="custom-file">
+                                <input type="file" name="profileImage"/>
+                            </div>
 
                             <div class="container text-center">
                                 <button class="btn btn-outline-primary">Save Trainer</button>
