--- a/QlikGym/src/main/resources/templates/normal/base.html
+++ b/QlikGym/src/main/resources/templates/normal/base.html
@@ -116,7 +116,7 @@ END navbar -->
 
     </div>
 
-    <th:block th:text="${#session.removeAttribute('message')}"></th:block>
+   <!-- <th:block th:text="${#session.removeAttribute('message')}"></th:block>-->
 
   </div>
 
