--- a/QlikGym/src/main/resources/templates/admin/show_trainers.html
+++ b/QlikGym/src/main/resources/templates/admin/show_trainers.html
@@ -9,60 +9,99 @@
 <section>
   <div class="card mr-5 ml-3">
     <div class="card-body">
-      <h2 class="text-center">Available Trainers</h2>
+      <h1 class="text-center">Trainers</h1>
 
-      <table class="table table-hover table-striped">
-        <thead>
-        <tr>
-          <th>ID</th>
-          <th>Name</th>
-          <th>Contact Info</th>
-          <th>Hourly Rate</th>
-          <th>Description</th>
-        </tr>
-        </thead>
-        <tbody>
-        <!-- Use Thymeleaf each loop to iterate over the list of trainers -->
-        <tr th:each="trainer : ${trainer.content}">
-          <td th:text="${trainer.id}"></td>
-          <td th:text="${trainer.name}"></td>
-          <td th:text="${trainer.contactInfo}"></td>
-          <td th:text="${trainer.hourlyRate}"></td>
-          <td th:text="${trainer.description}"></td>
-        </tr>
-        </tbody>
-      </table>
+      <div class="search-container mt-3">
 
+        <input onkeyup="search()" id="search-input" type="text"
+               class="form-control" placeholder="
+                   Search your contacts here"/>
+        <div class="search-result">
+          <h2> this is search result</h2>
+        </div>
+      </div>
+      <div class="table-responsive">
+        <table class="table table-hover">
+          <thead>
+          <tr>
+            <th scope="col">#ID</th>
+            <th scope="col">Name</th>
+            <th scope="col">Description</th>
+            <th scope="col">Location</th>
+            <th scope="col">HourlyRate</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr th:each="t:${trainer} ">
+            <th scope="row" th:text="'QLIK' + ${t.id}">1</th>
+
+
+
+            <td>
+              <img  class="my_profile_pic"
+                    src="" th:src="@{'/img/'+${t.image}}"
+                    alt="profile photo"/>
+              <span th:text="${t.name}"> </span></td>
+
+            <td>
+              <a href="" th:href="@{'/admin/'+${t.id}+'/
+                    trainer'}">
+                <span th:text="${t.description}"></span>
+              </a></td>
+
+            <td th:text="${t.contactInfo}"></td>
+            <td th:text="${t.hourlyRate}"></td>
+            <td>
+
+              <!--  <a href="" th:onclick="|deleteContact(${c.cId})|" class="btn btn-danger btn-small">Delete</a> --><!--
+              <a href="" th:onClick=" 'deleteTrainer('+ ${t.id} +', event)'"
+                 class="btn btn-danger btn-small">Delete</a>-->
+              <form th:action="@{'/admin/delete/' + ${t.id}}" method="post">
+                <button type="submit" class="btn btn-danger btn-small">Delete</button>
+              </form>
+
+
+              <form method="post" th:action="@{'/admin/update-trainer/'+${t.id}}" class="mt-2">
+                <button type="submit" class="btn btn-primary btn-small">Update</button>
+              </form>
+
+            </td>
+          </tr>
+
+          </tbody>
+        </table>
+      </div>
+      <!--Pagination -->
       <nav aria-label="Page navigation example">
-
         <ul class="pagination">
+          <li th:if="${currentPage != 0}" class="page-item">
+            <a th:href="@{'/admin/show-trainers/'+${currentPage-1}}"
+               class="page-link" href="#">Previous</a></li>
 
-          <li th:if="${currentPage != 0}" class="page-item"><a th:href="@{'/admin/show-trainers/'
-          +${currentPage-1}}" class="page-link" href="#">Previous</a></li>
+          <li th:classappend="${currentPage==i-1?'active':''}"
+              th:each="i:${#numbers.sequence(1,totalPages)}"
+              class="page-item">
+            <a th:href="@{'/admin/show-trainers/'+${i-1}}"
+               class="page-link" href="#"><span th:text="${i}"></span></a></li>
 
-
-
-          <li th:classappend="${currentPage==i-1?'active':''}" th:each="i :
-           ${#numbers.sequence(1,totalPages)}" class="page-item"><a
-                  th:href="@{'/admin/show-trainers/'+${i-1}}" class="page-link" href="#"><span
-                  th:text="${i}"></span></a></li>
-
-
-          <li th:if="${currentPage+1 != totalPages}" class="page-item"><a
-                  th:href="@{'/admin/show-trainers/'+${currentPage+1}}"
-                  class="page-link" href="#">Next</a></li>
+          <li th:if="${currentPage+1 != totalPages}"
+              class="page-item"><a th:href="@{'/admin/show-trainers/'+${currentPage+1}}"
+                                   class="page-link" href="#">Next</a></li>
         </ul>
       </nav>
+
     </div>
   </div>
   <script>
         $(document).ready(() => {
-          $(".item").removeClass("active");
-          $("#contacts-link").addClass("active");
-        });
-      </script>
+        $(".item").removeClass("active");
+         $("#view-contact-link").addClass("active");
+         });
+    </script>
+
+
 </section>
 
-</body>
 
+</body>
 </html>
