--- a/QlikGym/src/main/resources/templates/admin/admin_dashboard.html
+++ b/QlikGym/src/main/resources/templates/admin/admin_dashboard.html
@@ -12,16 +12,16 @@
       <div class="card-body my-5">
         <div class="container text-center">
           <img src="" style="height: 200px; width: 200px"
-               class="my_profile_picture" th:src="@{'/img/contact_logo.png'}"
+               class="my_profile_picture-admin" th:src="@{'/img/gym.jpg'}"
                alt="profile photo" />
         </div>
 
         <h1
-                class="text-center mt-3 text-secondary font-italic font-weight-light">
+                class="text-center mt-3 text-purple font-italic font-weight-bold">
           This is the admin dashboard.</h1>
 
         <a th:href="@{/admin/add-trainer}"
-           class="btn btn-primary mt-4 btn-block text-uppercase">Add
+           class="btn text-purple1 mt-4 btn-block text-uppercase">Add
           New Trainer</a>
 
         <hr />
