--- a/QlikGym/src/main/resources/templates/login.html
+++ b/QlikGym/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
     <title>this is home page</title>
 </head>
 <body>
-<section>
+<section class="banner">
     <div id="login">
 
         <div class="container">
@@ -16,7 +16,7 @@
 
                         <form id="login-form" class="form" th:action="@{/dologin}" action="#" method="post">
 
-                            <h3 class="text-center text-info">Login</h3>
+                            <h3 class="text-center text-purple ">Login</h3>
 
                             <div th:if="${param.error}" class="alert alert-danger">
                                 Invalid username and password
@@ -34,34 +34,28 @@
 
 
                             <div class="form-group">
-                                <label for="username" class="text-info">Username:</label><br>
+                                <label for="username" class="text-purple">Username:</label><br>
                                 <input type="text" name="username" id="username" class="form-control">
                             </div>
 
 
                             <div class="form-group">
-                                <label for="password" class="text-info">Password:</label><br>
+                                <label for="password" class="text-purple">Password:</label><br>
                                 <input type="password" name="password" id="password" class="form-control">
                             </div>
 
 
 
                             <div class="form-group">
-                                <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-                                <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                                <label for="remember-me" class="text-purple"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
+                                <input type="submit" name="submit" class="btn text-purple1 btn-md" value="submit">
                             </div>
 
                             <div id="register-link" class="text-right">
-                                <a href="/signup" class="text-info">Register here</a>
+                                <a href="/signup" class="text-purple">Register here</a>
                             </div>
 
-                            <div class="container text-center">
 
-
-                                <a th:href="@{/forgot}" > Forgot Password ?</a>
-
-
-                            </div>
 
 
                         </form>
