--- a/QlikGym/src/main/resources/templates/normal/settings.html
+++ b/QlikGym/src/main/resources/templates/normal/settings.html
@@ -20,7 +20,7 @@
 
           <div class="card-body">
 
-            <h3 class="mb-3">Change password</h3>
+            <h3 class="mb-3 text-purple">Change password</h3>
 
             <form  th:action="@{/user/change-password}" method="post">
 
@@ -51,8 +51,8 @@
 
               <div class="container text-center">
 
-                <button type="submit" class="btn btn-success">Change</button>
-                <button type="reset" class="btn btn-warning">Reset</button>
+                <button type="submit" class="btn text-purple1">Change</button>
+                <button type="reset" class="btn text-purple1">Reset</button>
 
               </div>
 
