--- a/QlikGym/src/main/resources/templates/normal/user_dashboard.html
+++ b/QlikGym/src/main/resources/templates/normal/user_dashboard.html
@@ -12,16 +12,16 @@
       <div class="card-body my-5">
         <div class="container text-center">
           <img src="" style="height: 200px; width: 200px"
-               class="my_profile_picture" th:src="@{'/img/contact_logo.png'}"
+               class="my_profile_picture-admin" th:src="@{'/img/gym.jpg'}"
                alt="profile photo" />
         </div>
 
         <h1
-                class="text-center mt-3 text-secondary font-italic font-weight-light">
+                class="text-center mt-3 text-purple font-italic font-weight-bold">
           Start booking your appointments.</h1>
 
         <a th:href="@{/user/add-appointment}"
-           class="btn btn-primary mt-4 btn-block text-uppercase">Book Appointment</a>
+           class="btn text-purple1 mt-4 btn-block text-uppercase">Book Appointment</a>
         <hr />
 
       </div>
