--- a/QlikGym/src/main/resources/templates/normal/base.html
+++ b/QlikGym/src/main/resources/templates/normal/base.html
@@ -90,46 +90,28 @@ END navbar -->
   <a id="home-link" href="#" th:href="@{/user/index}" class="item active"> <i class="fas fa-home"></i> Home</a>
   <a id="appointment-link" href="#" th:href="@{/user/show-appointments/0}" class="item"><i class="fas fa-id-card-alt"></i> View Appointments</a>
   <a id="add-link" href="#" th:href="@{/user/add-appointment}" class="item"><i class="fas fa-pencil-alt"></i>Make Appointment</a>
-  <a id="upload-link" href="#" th:href="@{/user/pictures}" class="item"><i class="fas fa-pencil-alt"></i>Upload Picture</a>
+  <a id="upload-link" href="#" th:href="@{/user/calculate-bmi}" class="item"><i class="fas fa-pencil-alt"></i>BMI Calculator</a>
+<!--  <a id="trend-link" href="#" th:href="@{/weight/input}" class="item"><i class="fas fa-pencil-alt"></i>weight</a>-->
   <a id="profile-link" href="#" th:href="@{/user/profile}" class="item"><i class="fas fa-user-circle"></i> Your Profile </a>
   <a id="settings-link" href="#" th:href="@{/user/settings}" class="item"> <i class="fas fa-cogs"></i> Settings</a>
   <a href="#" th:href="@{/logout}" class="item"><i class="fas fa-sign-out-alt"></i> Logout</a>
   <div class="divider"></div>
-
 </div>
-
 <!-- END sidebar -->
-
 <!--   Content area -->
-
 <div class="content mt-5">
-
   <i onclick="toggleSidebar()" class="fas fa-bars m-3"></i>
-
-
   <!-- message box  -->
   <div th:if="${session.message}" class="container">
-
     <div th:classappend="${'alert-'+session.message.type}" class="alert  text-center" role="alert">
-
       <span th:text="${session.message.content}"></span>
-
     </div>
-
    <!-- <th:block th:text="${#session.removeAttribute('message')}"></th:block>-->
-
   </div>
-
-
   <div th:replace="${content}"></div>
-
-
 </div>
-
 <!-- END Content area  -->
 <!-- Optional JavaScript -->
-
-
 <script
         src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
