--- a/QlikGym/src/main/resources/templates/normal/profile.html
+++ b/QlikGym/src/main/resources/templates/normal/profile.html
@@ -24,27 +24,27 @@
         <table class="table text-center">
           <thead>
           <tr>
-            <th scope="col">#USERID</th>
-            <th scope="col">SCMUSER<span th:text="${user.id}"></span></th>
+            <th scope="col" class="text-purple">#USERID</th>
+            <th scope="col" class="text-purple" >SCMUSER<span th:text="${user.id}"></span></th>
 
           </tr>
           </thead>
           <tbody>
           <tr>
-            <th scope="row">Email</th>
+            <th scope="row" class="text-purple">Email</th>
             <td><span th:text="${user.email}"></span></td>
 
           </tr>
 
 
           <tr>
-            <th scope="row">Role</th>
+            <th scope="row" class="text-purple">Role</th>
             <td><span th:text="${user.role}"></span></td>
 
           </tr>
 
           <tr>
-            <th scope="row">Acccount Active</th>
+            <th scope="row" class="text-purple">Acccount Active</th>
             <td><span th:text="${user.enabled}"></span></td>
 
           </tr>
@@ -52,7 +52,7 @@
           </tr>
 
           <tr>
-            <th scope="row">About you</th>
+            <th scope="row" class="text-purple">About you</th>
             <td><span th:text="${user.about}"></span></td>
 
           </tr>
